Updated Lab-1 intro to notebooks.

--- a/PyWorkshop_Lab_n1.ipynb
+++ b/PyWorkshop_Lab_n1.ipynb
@@ -101,11 +101,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, there are many more keyboard shortcuts available in Jupyter Notebooks! You can check the full list by navigating to **Help -> Keyboard Shortcuts** in the menu bar.\n",
-    "\n",
+    "However, there are many more keyboard shortcuts available in Jupyter Notebooks! You can check the full list by navigating to **Help -> Keyboard Shortcuts** in the menu bar.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now, try deleting the following cell by pressing `D` twice, or explore other shortcuts by creating and editing cells!\n",
     "\n",
-    "<div style=\"border: 2px solid red; padding: 10px; background-color: #f9f9f9; border-radius: 5px;\">\n",
+    "<div style=\"border: 2px solid red; padding: 10px; background-color: #f5d3d7; border-radius: 5px;\">\n",
     "\n",
     "### Delete Me! 🗑️\n",
     "\n",
@@ -116,8 +121,7 @@
     "**Please press 🇩 + 🇩 and make me disappear!** \n",
     "\n",
     "💨 *I won't mind, I promise!*\n",
-    "</div>\n",
-    "\n"
+    "</div>"
    ]
   },
   {
@@ -230,7 +234,71 @@
     "  ```\n",
     "![Local Image](images/dropDown.PNG)\n",
     "\n",
-    "Make sure the image is in the correct folder path relative to your notebook!"
+    "Make sure the image is in the correct folder path relative to your notebook!\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Here’s how you can add a new section about **HTML and CSS support** in Jupyter Notebooks, along with your existing image insertion section:\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 6️⃣ HTML and CSS Support 🌐\n",
+    "\n",
+    "Jupyter Notebooks support a variety of **HTML** and **CSS** elements, allowing you to style and format your notebooks beyond just Markdown.\n",
+    "\n",
+    "**Using HTML in Notebooks**\n",
+    "\n",
+    "You can directly insert **HTML** code within Markdown cells to create richer content. For example:\n",
+    "\n",
+    "```html\n",
+    "<p>This is a paragraph written using HTML.</p>\n",
+    "<a href=\"https://www.jupyter.org\" target=\"_blank\">This is a link to the Jupyter website.</a>\n",
+    "```\n",
+    "\n",
+    "This will render as:\n",
+    "\n",
+    "<p>This is a paragraph written using HTML.</p>\n",
+    "<a href=\"https://www.jupyter.org\" target=\"_blank\">This is a link to the Jupyter website.</a>\n",
+    "\n",
+    "**Using CSS for Custom Styling**\n",
+    "\n",
+    "To add custom styling with **CSS**, you can embed styles directly into Markdown cells:\n",
+    "\n",
+    "\n",
+    "```html\n",
+    "Define the style:\n",
+    "<style>\n",
+    "  .custom-box {\n",
+    "    background-color: #f0f8ff;\n",
+    "    padding: 10px;\n",
+    "    border-radius: 5px;\n",
+    "  }\n",
+    "</style>\n",
+    "\n",
+    "Apply it to the component:\n",
+    "<div class=\"custom-box\">\n",
+    "  This is a custom-styled box using HTML and CSS!\n",
+    "</div>\n",
+    "```\n",
+    "\n",
+    "This will render a custom-styled box like this:\n",
+    "\n",
+    "<div class=\"custom-box\" style=\"background-color: #f0f8ff; padding: 10px; border-radius: 5px;\">\n",
+    "  This is a custom-styled box using HTML and CSS!\n",
+    "</div>\n",
+    "\n",
+    "You can also use CSS to style specific text elements:\n",
+    "\n",
+    "```html\n",
+    "<p style=\"color: blue; font-size: 18px;\">This text is styled with CSS.</p>\n",
+    "```\n",
+    "\n",
+    "This will render the text in blue, with a larger font size:\n",
+    "\n",
+    "<p style=\"color: blue; font-size: 18px;\">This text is styled with CSS.</p>"
    ]
   },
   {
@@ -252,27 +320,48 @@
     "To export your notebook as an HTML file:\n",
     "\n",
     "1. Go to the **File** menu.\n",
+    "<br>\n",
+    "\n",
     "2. Select **Download as**.\n",
+    "<br>\n",
+    "\n",
     "3. Choose **HTML (.html)**.\n",
     "\n",
     "This will download an HTML version of your notebook, which is great for sharing or displaying your work online without requiring the recipient to have Jupyter installed!\n",
     "\n",
-    "You can also export your notebook in other formats, such as PDF or a Python script, using the same **Download as** menu. Each format serves a different purpose, so feel free to explore!\n"
+    "You can also export your notebook in other formats, such as PDF or a Python script, using the same **Download as** menu. Each format serves a different purpose, so feel free to explore!\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Conclusion 🌟\n",
+    "\n",
+    "Jupyter Notebooks are an excellent tool for both learning and professional development. They allow you to blend code, text, and visuals in one place, making your work easy to share and replicate. Whether you're analyzing data, documenting processes, or building a portfolio of projects, Jupyter will serve as a versatile and indispensable tool. As you continue working with Jupyter, remember a few key takeaways:\n",
+    "\n",
+    "1. **Save Often** 💾: Jupyter doesn’t automatically save your work, so make a habit of saving manually!\n",
+    "<br>\n",
+    "\n",
+    "2. **Experiment with Markdown** ✍️: It's a flexible tool for creating well-organized, readable documents alongside your code.\n",
+    "<br>\n",
+    "\n",
+    "3. **Use Shortcuts** ⌨️: Learn keyboard shortcuts to speed up your workflow and make navigating your notebooks easier.\n",
+    "<br>\n",
+    "\n",
+    "4. **Explore Jupyter's Full Potential** 💡: As you become more comfortable, consider exploring extensions, widgets, and magic commands to unlock the full potential of Jupyter for data analysis and interactive programming.\n",
+    "\n",
+    "Feel free to explore more features as you become comfortable with the basics. Your Jupyter journey is just beginning! 🚀"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pyworkshop",
+   "display_name": "python_workshop",
    "language": "python",
-   "name": "pyworkshop"
+   "name": "python_workshop"
   },
   "language_info": {
    "codemirror_mode": {
@@ -284,7 +373,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
