--- a/PyWorkshop_Lab_n2.ipynb
+++ b/PyWorkshop_Lab_n2.ipynb
@@ -358,18 +358,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "fd0f2385",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: Jane Age: 25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print multiple variables\n",
     "name = \"Jane\"\n",
@@ -487,8 +479,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pi = 3.999999999\n",
-    "number = int(pi)   # This will become 3, not 4\n",
+    "decimal = 3.999999999\n",
+    "number = int(decimal)   # This will become 3, not 4\n",
     "print(number)"
    ]
   },
@@ -622,22 +614,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2b054379",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'exercises' has no attribute 'check_solution_n3'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 10\u001b[0m\n\u001b[0;32m      6\u001b[0m country \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m      8\u001b[0m sentence \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[43mexercises\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_solution_n3\u001b[49m(name, age, city, country, sentence)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'exercises' has no attribute 'check_solution_n3'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fill with information about yourself (or not)\n",
     "\n",
