Corrected the expression on exercise 2.8

--- a/PyWorkshop_Lab_n3_wSolutions.ipynb
+++ b/PyWorkshop_Lab_n3_wSolutions.ipynb
@@ -1262,7 +1262,7 @@
     "# Expression 8: Modify x so that x is between 5 and 10 (inclusive)\n",
     "x = 6\n",
     "\n",
-    "result_8 = (5 <= x <= 10 != 8) # Idiomatic Python\n",
+    "result_8 = ((5 <= x <= 10) and x != 8) # Idiomatic Python\n",
     "\n",
     "\n",
     "# Expression 9: Modify a, b, c\n",
