Updated the labortory to include exercise solution validations

--- a/PyWorkshop_Lab_n4_wSolutions.ipynb
+++ b/PyWorkshop_Lab_n4_wSolutions.ipynb
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -472,9 +472,9 @@
       "\n",
       "Groceries list after removing duplicates:\n",
       "Final groceries list:\n",
-      "['apple', 'banana', 'bread', 'eggs', 'milk', 'orange', 'carrot', 'broccoli', 'spinach']\n",
+      "['apple', 'banana', 'bread', 'eggs', 'milk', 'orange', 'broccoli', 'carrot', 'spinach']\n",
       "\n",
-      "Final organized inventory: apple, banana, bread, eggs, milk, orange, carrot, broccoli, spinach\n"
+      "Final organized inventory: apple, banana, bread, eggs, milk, orange, broccoli, carrot, spinach\n"
      ]
     }
    ],
@@ -501,13 +501,34 @@
     "print(f\"Groceries list after removing duplicates:\")\n",
     "\n",
     "# Step 5: Add vegetables to the list\n",
-    "vegies = [\"carrot\", \"broccoli\", \"spinach\"]\n",
+    "vegies = [\"broccoli\", \"carrot\", \"spinach\"]\n",
     "groceries_list = groceries_list + vegies\n",
     "print(f\"Final groceries list:\\n{groceries_list}\\n\")\n",
     "\n",
     "# Step 6: Join the items into a single string separated by \", \" (tip: recall the .join() method introduced last class)\n",
     "groceries_string = \", \".join(groceries_list)\n",
     "print(\"Final organized inventory:\", groceries_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Step 1: Original list and length are correct.\n",
+      "✅ Step 2: Non-grocery items removed correctly.\n",
+      "✅ Step 4: Duplicates removed correctly.\n",
+      "✅ Step 5: Vegetables added correctly.\n",
+      "✅ Step 6: Final inventory string is correct.\n"
+     ]
+    }
+   ],
+   "source": [
+    "exercises.check_solution_n1_lab4(mystery_list, groceries_list, groceries_string)"
    ]
   },
   {
@@ -542,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -577,6 +598,27 @@
     "# Print the results as strings\n",
     "print(\"Even List Middle Elements:\", even_middle_elements)\n",
     "print(\"Odd List Middle Element:\", odd_middle_element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Step 1: Lengths are correct.\n",
+      "✅ Step 2: `even_list` is sorted correctly.\n",
+      "✅ Step 2: `odd_list` is sorted correctly.\n",
+      "✅ Step 3: Middle elements of `even_list` are correct.\n",
+      "✅ Step 4: Middle element of `odd_list` is correct.\n"
+     ]
+    }
+   ],
+   "source": [
+    "exercises.check_solution_n2_lab4(even_list, odd_list, even_middle_elements, odd_middle_element)"
    ]
   },
   {
@@ -1028,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1307,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1379,6 +1421,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Step 1: Price for 'The Great Gatsby' is correct.\n",
+      "✅ Step 1: Price for '1984' is correct.\n",
+      "✅ Step 1: Price for 'To Kill a Mockingbird' is correct.\n",
+      "✅ Step 1: Price for 'Pride and Prejudice' is correct.\n",
+      "✅ Step 2: 'Moby Dick' added correctly to bookstore_inventory.\n",
+      "✅ Step 3: Price for 'The Great Gatsby' in `detailed_inventory` is correct.\n",
+      "✅ Step 3: Price for '1984' in `detailed_inventory` is correct.\n",
+      "✅ Step 3: Price for 'To Kill a Mockingbird' in `detailed_inventory` is correct.\n",
+      "✅ Step 3: Price for 'Pride and Prejudice' in `detailed_inventory` is correct.\n",
+      "✅ Step 4: 'Moby Dick' details in `detailed_inventory` are correct.\n",
+      "✅ Step 5: Publisher for 'The Great Gatsby' in `full_inventory` is correct.\n",
+      "✅ Step 5: 'Moby Dick' check is correct.\n",
+      "✅ Step 5: 'Brave New World' check is correct.\n",
+      "✅ Step 5: 'The Metamorphosis' check is correct.\n",
+      "✅ Step 5: 'The Lusiads' check is correct.\n",
+      "✅ Step 6: `book_order_mary_jane` is correct.\n",
+      "✅ Step 8: Updated `book_order_peter_parker` is correct.\n"
+     ]
+    }
+   ],
+   "source": [
+    "exercises.check_solution_n3_lab4(bookstore_inventory, detailed_inventory, full_inventory, book_order_mary_jane, book_order_peter_parker)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1389,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1447,9 +1522,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('apple', 'banana', 'cherry')\n",
+      "banana\n",
+      "3\n",
+      "(1, 'apple', 3.14)\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a tuple\n",
     "fruit_tuple = (\"apple\", \"banana\", \"cherry\")\n",
@@ -1500,9 +1586,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cherry', 'banana', 'apple'}\n",
+      "{'orange', 'cherry', 'banana', 'apple'}\n",
+      "{'orange', 'cherry', 'apple'}\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Creating a set\n",
     "unique_fruits = {\"apple\", \"banana\", \"cherry\", \"apple\"}\n",
