Updated the final project statement requirements and description.

--- a/Project_Template.ipynb
+++ b/Project_Template.ipynb
@@ -2,39 +2,40 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6da2178c",
    "metadata": {},
    "source": [
     "# 🖥️ Python Laboratory 6️⃣: Final Python Project \n",
     "<br>\n",
     "\n",
-    "This session will be dedicated to introducing the project statement, as well as discuss some additional concepts inherent to python, namely imports, and the random and time modules, which are essential to the project."
+    "In this session, we'll introduce the project outline and explore additional Python concepts needed for completion. We’ll cover the basics of imports and dive into the `random` and `time` modules, which are essential for building the project."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "23a65e9e",
    "metadata": {},
    "source": [
+    "<div style=\"border: 2px solid #d2aa77; padding: 10px; background-color: #ffec9e; border-radius: 5px;\">\n",
+    "\n",
     "## Project Statement 🛠️\n",
     "\n",
-    "### Overview\n",
+    "### Overview 👀\n",
     "\n",
     "In this project, you are responsible for developing a **typing test game** inspired by examples like [TypingTest](https://www.typingtest.com/) and [TypeRacer](https://play.typeracer.com/). The goal of the game is to challenge players to type a series of words as quickly and accurately as possible, assessing their typing speed and accuracy.\n",
     "\n",
-    "### Project Description\n",
+    "### Project Description 🔍\n",
     "\n",
     "The game will provide a list of words, randomly sampled from a pre-defined word list, that the player needs to type. The primary objective is to type all words accurately and as quickly as possible. The player’s **final score** will be based on two main criteria:\n",
     "\n",
     "1. **Total Time Taken**: The time from when the player begins typing the first word until they complete the last word. (Shorter times are better.)\n",
     "\n",
+    "\n",
     "2. **Accuracy**: The number of words typed correctly. \n",
     "\n",
-    "The score will be calculated using the following formula, which incorporates both the time taken and the accuracy. This formula will utilize a similarity-checking function to determine the accuracy of each word typed by the player. **You will be required to implement this formula.** \n",
+    "The score will be calculated using the following formula, which incorporates both the time taken and the accuracy. This formula will utilize a similarity-checking function to determine the accuracy of each word typed by the player. **You will be required to implement the formula below.** \n",
     "\n",
     "\n",
-    "#### Scoring Formula\n",
-    "\n",
+    "#### Scoring Formula ➕\n",
+    " \n",
     "Let:\n",
     "- $T =$ Total time taken (in seconds) to type all words.\n",
     "\n",
@@ -50,7 +51,7 @@
     "The final score $\\text{Score}$ can be calculated as follows:\n",
     "\n",
     "$$\n",
-    "\\text{Score} = \\max \\left( \\left( \\frac{C}{N} \\right) \\times 100 - \\left( \\frac{T}{N} \\right) + \\left( \\frac{\\sum S}{N} \\times 10 \\right), \\ 0\\right)\n",
+    "\\text{Score} = \\max\\left( \\left( \\frac{C}{N} \\right) \\times 100 - \\left( \\frac{T}{N} \\right) + \\left( \\frac{\\sum S}{N} \\times 10 \\right), \\ 0\\right)\n",
     "$$\n",
     "\n",
     "Where:\n",
@@ -62,10 +63,10 @@
     "\n",
     "3. **$\\frac{\\sum S}{N} \\times 10$** adds a similarity-based adjustment, where a perfect match contributes positively to the score.\n",
     "\n",
-    "The **($\\max(..., 0)$** function ensures that the score cannot go below zero, so if the calculated score is negative, the final score will be set to zero.\n",
+    "The **$\\max(..., 0)$** function ensures that the score cannot go below zero, so if the calculated score is negative, the final score will be set to zero.\n",
     "\n",
     "\n",
-    "### Example\n",
+    "### Example ✒️\n",
     "\n",
     "For a test where:\n",
     "- $ T = 60 $ seconds\n",
@@ -88,91 +89,117 @@
     "\n",
     "$$\n",
     "\\text{Score} = \\max(80 - 6 + 9, 0) = \\max(83, 0) = 83\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bd246913",
-   "metadata": {},
-   "source": [
-    "### Provided Resources\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d8e81f5b",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "43bb9c8d",
-   "metadata": {},
-   "source": [
-    "### Provided Resources\n",
+    "$$\n",
     "\n",
-    "- **Template**: A code template will be provided to guide you through the core structure of the project. Feel free to modify and expand upon it as needed.\n",
-    "- **Word Lists**: Three types of word lists (small, medium, and long words) will be provided. At the start, the user will select a word list type, and your program will randomly sample a set number of words from this list.\n",
+    "\n",
+    "### Provided Resources 📚\n",
+    "\n",
+    "- **Template**: A code template will be provided below to guide you through the core structure of the project. Feel free to modify and expand upon it as needed.\n",
+    "\n",
+    "\n",
+    "- **Word Lists**: Three types of word lists (small, medium, and long words) will be provided. At the start, the user will select a word list type and the number of words, and your program will randomly sample the set number of words from the specified list.\n",
+    "\n",
+    "\n",
     "- **Similarity Function**: A built-in function for evaluating the similarity between words is included. This will be essential for calculating the score, as the score will depend on how closely typed words match the intended words.\n",
     "\n",
-    "### Requirements\n",
     "\n",
-    "#### Basic Requirements (Mandatory)\n",
+    "### Requirements 📝\n",
+    "\n",
+    "#### Basic Requirements (Mandatory) 🟢\n",
     "\n",
     "1. **User Input for Game Setup**:\n",
-    "   - Allow the player to specify the number of words they want to type for the test.\n",
-    "   - Let the player choose the type of words for the test (small, medium, or long).\n",
+    "    - Allow the player to specify the number of words they want to type for the test.\n",
+    "    - Let the player choose the type of words for the test (small, medium, or long).\n",
+    "\n",
     "\n",
     "2. **Time Tracking**:\n",
     "   - Implement a timer to measure how long it takes for the player to type all words in the sequence.\n",
     "\n",
+    "\n",
     "3. **Score Calculation**:\n",
     "   - Use the provided similarity function and scoring formula to calculate the final score based on the accuracy of typed words and total time taken.\n",
     "\n",
-    "#### Medium Difficulty Requirements (Optional)\n",
+    "#### Medium Difficulty Requirements (Optional) 🟡\n",
     "\n",
     "1. **Leaderboard**:\n",
     "   - Implement a leaderboard that stores each player’s scores, ranking them from best to worst based on the score.\n",
     "   - Allow multiple scores per player, so a player can appear on the leaderboard in several positions.\n",
+    "\n",
+    "\n",
     "\n",
     "2. **Additional Game Modes**:\n",
     "   - Create extra modes of play beyond the basic small, medium, and long words. For example:\n",
     "     - **Thematic Mode**: Use words centered around a specific theme (e.g., animals, technology, nature).\n",
     "     - **Mix-up Mode**: Combine small, medium, and long words in a single test.\n",
     "\n",
-    "#### Hard Difficulty Requirements (Optional)\n",
+    "#### Hard Difficulty Requirements (Optional) 🔴\n",
     "\n",
-    "1. **Graphical User Interface (GUI)**:\n",
-    "   - Develop a simple GUI for the game to enhance the user experience. The GUI should ideally:\n",
+    "1. **Graphical User Interface (GUI) 🖥️**:\n",
+    "   - Develop a simple GUI for the game to improve the user experience. The GUI should ideally:\n",
     "     - Allow players to select game settings, such as word type and word count, through buttons or dropdown menus.\n",
-    "     - Display the words to type and show real-time feedback on the typed words.\n",
     "     - Show the time taken and the final score upon completion.\n",
-    "   - The GUI can be implemented using any suitable Python library, such as `tkinter` or `pygame`.\n",
+    "     - The GUI can be implemented using any suitable Python library, such as `tkinter` or `pygame`.\n",
+    "   \n",
+    "   \n",
+    "### Final Notes 📌\n",
     "\n",
-    "---\n",
+    "This project offers a hands-on opportunity to apply the core programming concepts we've covered throughout the workshop, including user input handling, list manipulation, loops, conditionals, and operators. For both the easy and medium requirements, all necessary concepts have already been introduced in prior sessions — **no new concepts are needed to implement these parts, although you may use whatever you are most confortable with.**\n",
     "\n",
-    "### Example Usage Flow\n",
+    "Feel free to experiment, add creative game modes, and most importantly, enjoy building your typing test game!\n",
     "\n",
-    "1. **Game Setup**: The user is prompted to choose a word list type (small, medium, or long) and the number of words they want to type.\n",
-    "2. **Typing Test**: The words are displayed one by one or as a list, and the timer starts as soon as the player begins typing. The player types each word in succession.\n",
-    "3. **Score Calculation**: Once all words are typed, the program calculates the score based on time taken and word accuracy.\n",
-    "4. **Display Results**: The program outputs the player’s final score, accuracy, and time taken.\n",
-    "5. **(Optional) Leaderboard**: If enabled, the score is stored in a leaderboard, where the player can view their ranking among other players.\n",
     "\n",
-    "---\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring Addtitional Concepts\n",
     "\n",
-    "### Final Notes\n",
-    "\n",
-    "This project will give you hands-on experience with key programming concepts, including user input handling, list manipulation, random sampling, time measurement, and (optionally) data storage and GUI design. Ensure to test each part of your program thoroughly, especially if implementing advanced features like the leaderboard or GUI.\n",
-    "\n",
-    "Feel free to explore, get creative with your game modes, and have fun developing your typing test game!"
+    "### Import in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Project Template 📜🖋️"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "475695ac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -180,9 +207,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_workshop",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python_workshop"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -194,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
